# learning-wasm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
projects/cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
projects/cpp/src/book/webassembly-friendly-programming-with-cpp/: README.md
projects/cpp/src/book/webassembly-friendly-programming-with-cpp/01/02/: CMakeLists.txt  hello.cc  hello.js  hello.wasm
projects/cpp/src/rust_and_wasm/wasm-game-of-life/: .gitignore  Cargo.toml
projects/cpp/src/rust_and_wasm/wasm-game-of-life-fe/: package-lock.json  package.json
projects/rust/learning-rustwasm/: .npmignore  Cargo.toml  README.md  package.json
projects/rust/learning-rustwasm/src/: _wasm_bindgen.rs  lib.rs  util.rs
projects/rust/learning-rustwasm/src/_wasm_bindgen/: _02.rs
projects/rust/learning-rustwasm/src/_wasm_bindgen/_02/: _17.rs
projects/rust/learning-rustwasm/src/_wasm_bindgen/_02/_17/: _02.rs
projects/rust/learning-rustwasm/src/_wasm_bindgen/_02/_17/_02/: _01.rs  _02.rs
projects/rust/learning-rustwasm/tests/: web.rs
projects/rust/learning-rustwasm/tests/app/: index.html
projects/rust/learning-wasm-pack/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
projects/rust/learning-wasm-pack/src/: index.html  lib.rs
projects/rust/learning-wasm-pack/tests/: app.rs
projects/rust/learning-wasm-pack/tests/app/: index.html  package-lock.json  package.json
src/book/webassembly-friendly-programming-with-cpp/01/02/: CMakeLists.txt  hello.cc  hello.html
src/book/webassembly-in-action/: README.md
src/book/webassembly-in-action/03/04/: CMakeLists.txt  calculate-primes.cc  calculate-primes.html  calculate-primes.js  calculate-primes.wasm
src/book/webassembly-in-action/03/05/: CMakeLists.txt  calculate-primes.cc  calculate-primes.html  calculate-primes.js
src/book/webassembly-in-action/03/06/: CMakeLists.txt  side-module.cc
src/doc/01/: 01.cpp
src/rust_and_wasm/: readme.md
src/rust_and_wasm/wasm-game-of-life/: Cargo.toml  README.md
src/rust_and_wasm/wasm-game-of-life-fe/: index.html  package-lock.json  package.json
src/rust_and_wasm/wasm-game-of-life-fe/src/: bootstrap.js  index.html  index.js
src/rust_and_wasm/wasm-game-of-life/src/: lib.rs  utils.rs
(+10 files in other folders)
