[package]
name = "learning-rustwasm"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dep:console_error_panic_hook", "dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.59", features = ['console'] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
opt-level = "s"