[package]
name = "learning-wasm-pack"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.59", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
